feat: Added feature of getting some last documents accessible for given job position.
