# internal/controllers/doc_controller.go
@@ -71,7 +71,7 @@ func (h *DocHttp) CreateDoc(c *gin.Context) {
 // @Security BearerAuth
 // @Summary Get last documents
 // @Description Get the latest documents within the event with the given ID. The documents can be retrieved only by the owner of the event and its ancestors, if they have the appropriate permissions.
-// @Tags event
+// @Tags document
 // @Accept json
 // @Produce json
 // @Param jp_id path string true "Job position id"
@@ -115,7 +115,7 @@ func (h *DocHttp) GetNLastDocsByEventID(c *gin.Context) {
 	case s.SEDBError:
 		h.logger.Errorf("Failed to get docs for event %s (%s)", eventID.String(), err2.Error())
 		serverErrResp(c, MsgServerError, MsgTryAgain)
-	case s.JPNotMatchedUser:
+	case s.SEJPNotMatchedUser:
 		h.logger.Debugf("Job position doesn't belong the user: %s", err2.Error())
 		forbiddenErrResp(c, MsgJPNotBelongsUser, MsgReferAdmin)
 	case s.SENotAncestor:
@@ -124,6 +124,64 @@ func (h *DocHttp) GetNLastDocsByEventID(c *gin.Context) {
 		forbiddenErrResp(c, MsgNotPermission, MsgNotAncestor)
 	default:
 		h.logger.Panicf("Unexpected error code %d in GetNLastDocsByEventID controller: %s", code, err2.Error())
+		serverErrResp(c, MsgServerError, MsgTryAgain)
+	}
+}
+
+// @Security BearerAuth
+// @Summary Get n last documents that are accessible for the user who sent the request.
+// @Description Get n last documents (according to the limit and offset values) that are accessible for the user (and one of his job positions) who sent the request. (If the job position is admin, he has access to all documents.) For example, offset = 20 and limit = 10 would return 10 records (documents 21-30).
+// @Tags document
+// @Accept json
+// @Produce json
+// @Param limit query int false "Number of documents to get. Maximum is 50"
+// @Param offset query int false "Number of documents to skip"
+// @Param jpid query string true "Job position id"
+// @Success 200 {object} HttpResponse{details=[]models.DocWithEventName} "Documents"
+// @Failure 500 {object} HttpResponse{details=string} "Server or database error"
+// @Failure 403 {object} HttpResponse{details=string} "Forbidden error. The user is not authorized to access this resource, job position doesn't belongs to the user or etc."
+// @Failure 401 {object} HttpResponse{details=string} "The user is not authorized"
+// Failure 400 {object} HttpResponse{details=string} "Bad request error/parsing error"
+// @Router /docs [get]
+func (h *DocHttp) GetNLastDocs(c *gin.Context) {
+	queryParser := newQueryParser(c, h.logger)
+	limitDefaultValue := uint64(20)
+	limit, _ := queryParser.ParseUInt("limit", &limitDefaultValue)
+	maxLimit := uint64(50)
+	if *limit > maxLimit {
+		*limit = 50
+	} else if *limit < 1 {
+		*limit = 1
+	}
+	offsetDefaultValue := uint64(0)
+	offset, _ := queryParser.ParseUInt("offset", &offsetDefaultValue)
+	jwt := getJWT(c, h.logger)
+	if jwt == nil {
+		return
+	}
+
+	jpID, err := queryParser.ParseID("jpid", nil)
+	if err != nil {
+		h.logger.Debugf("Error in parsing jpid: %s", err.Error())
+		return
+	}
+
+	h.logger.Debugf("Getting last %d docs (with offset %d)", *limit, *offset)
+	docs, err2 := h.docService.GetNLastDocs(jwt.UserID, *jpID, *limit, *offset)
+	if err2 == nil {
+		h.logger.Debugf("Got last %d docs (with offset %d) successfully", *limit, *offset)
+		successResp(c, MsgSuccessAction, *docs)
+		return
+	}
+	switch code := err2.GetCode(); code {
+	case s.SEDBError:
+		h.logger.Errorf("Failed to get last %d docs (with offset %d): %s", *limit, *offset, err2.Error())
+		customErrResp(c, hCDBError, MsgServerError, MsgTryAgain)
+	case s.SEJPNotMatchedUser:
+		h.logger.Debugf("Job position doesn't belong the user: %s", err2.Error())
+		customErrResp(c, hCJPNotMatchedUser, MsgJPNotBelongsUser, MsgReferAdmin)
+	default:
+		h.logger.Panicf("Unexpected error code %d in GetNLastDocs controller: %s", code, err2.Error())
 		serverErrResp(c, MsgServerError, MsgTryAgain)
 	}
 }
