# internal/models/doc.go
@@ -1,7 +1,5 @@
 package models
 
-import "encoding/json"
-
 type Doc struct {
 	ID ID `json:"id" example:"20354d7a-e4fe-47af-8ff6-187bca92f3f9"`
 	// The id of job position who created the document
@@ -23,23 +21,23 @@ type MediaPath struct {
 	FileName string `json:"file_name"`
 }
 
-func (s Doc) MarshalJSON() ([]byte, error) {
-	return json.Marshal(&struct {
-		ID        string      `json:"id"`
-		CreatedBy string      `json:"created_by"`
-		EventID   string      `json:"event_id"`
-		Context   *string     `json:"context"`
-		Paths     []MediaPath `json:"media_paths"`
-		CreatedAt int64       `json:"created_at"`
-	}{
-		ID:        s.ID.String(),
-		CreatedBy: s.CreatedBy.String(),
-		EventID:   s.EventID.String(),
-		Context:   s.Context,
-		Paths:     s.Paths,
-		CreatedAt: s.CreatedAt,
-	})
-}
+// func (s Doc) MarshalJSON() ([]byte, error) {
+// 	return json.Marshal(&struct {
+// 		ID        string      `json:"id"`
+// 		CreatedBy string      `json:"created_by"`
+// 		EventID   string      `json:"event_id"`
+// 		Context   *string     `json:"context"`
+// 		Paths     []MediaPath `json:"media_paths"`
+// 		CreatedAt int64       `json:"created_at"`
+// 	}{
+// 		ID:        s.ID.String(),
+// 		CreatedBy: s.CreatedBy.String(),
+// 		EventID:   s.EventID.String(),
+// 		Context:   s.Context,
+// 		Paths:     s.Paths,
+// 		CreatedAt: s.CreatedAt,
+// 	})
+// }
 
 type MediaType uint8
 
@@ -48,3 +46,9 @@ const (
 	MediaVideo
 	MediaAudio
 )
+
+// Contains doc details with its event name
+type DocWithEventName struct {
+	Doc
+	EventName string `json:"event_name"`
+}
